--- a/src/components/AppHeader/app-header.module.css
+++ b/src/components/AppHeader/app-header.module.css
@@ -1,39 +1,47 @@
 
-  a {
-    text-decoration: none;
-    color: #fff;
-  }
-  
-  .headCont > * {
-    width: calc(100% / 3);
-    display: flex;
-    align-items: center;
-  }
-  .account {
-    justify-content: end;
-  }
-  
-  .links > div, .account > div {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-  }
-  
-  
-  .logo {
-    justify-content: center;
-  }
-  
+a {
+  text-decoration: none;
+  color: #fff;
+}
 
-  .header {
-    background: #1C1C21;
-  }
+.headCont > * {
+  width: calc(100% / 3);
+  display: flex;
   
-  .headCont {
-    max-width: 1280px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-family: 'JetBrains Mono', 'Arial', sans-serif;
-  }
+}
+.account {
+  justify-content: end;
+}
+
+.links, .account{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  justify-content: center;
+
+  
+}
+.start, .end{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 8px;
+
+};
+
+.logo {
+  justify-content: center;
+}
+
+
+.header {
+  background: #1C1C21;
+}
+
+.headCont {
+  max-width: 1280px;
+  margin: 0 auto;
+  display: flex;
+
+  font-family: 'JetBrains Mono', 'Arial', sans-serif;
+}
