--- a/src/components/Burger/BurgerConstructor/burger-constructor.module.css
+++ b/src/components/Burger/BurgerConstructor/burger-constructor.module.css
@@ -1,27 +1,51 @@
-.wrapper {
+
+.order {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  gap: 12px;
+  padding: 0 16px 0 0;
 }
 
-.list {
-  max-height: calc(100vh - 580px);
+.components {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-end;
-  gap: 12px;
-  overflow-y: auto;
+  row-gap: 16px;
+  width: 100%;
+  height: 464px;
+  margin: 16px 0 16px 17px;
+  overflow-y: scroll;
 }
 
-.checkout {
-  align-self: flex-end;
+.bun {
+  margin-left: 48px;
+}
+
+.item {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  column-gap: 9.5px;
 }
 
-.icon {
-  background-size: 33px;
+.info {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  column-gap: 40px;
+  margin-top: 40px;
+}
+
+.price {
+  display: flex;
+  align-items: center;
+  column-gap: 9.5px;
+
+}
+
+.componentEmpty {
+  width: 100%;
+  height: 464px;
+  margin: 16px 0 16px 17px;
+}
+
+.bunContainer {
+  height: 80px;
 }
