--- a/src/components/ModalOverlay/modal-overlay.module.css
+++ b/src/components/ModalOverlay/modal-overlay.module.css
@@ -1,11 +1,21 @@
 .overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
-  left: 0;
-  height: 100vh;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+
   display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.6);
+  opacity: 0;
+  visibility: hidden;
+
+}
+
+.opened {
+  opacity: 1;
+  visibility: visible;
 }
