--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,18 @@ code {
   border-radius: none;
 }
 
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+a,
+button {
+  margin: 0;
+  padding: 0;
+}
