--- a/src/components/ModalOverlay/modal-overlay.module.css
+++ b/src/components/ModalOverlay/modal-overlay.module.css
@@ -2,20 +2,21 @@
   position: fixed;
   top: 0;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  display: none;
   width: 100%;
   height: 100%;
 
   background-color: rgba(0, 0, 0, 0.6);
-  opacity: 0;
-  visibility: hidden;
+  
+  transition: all 0.3s ease-in;
 
 }
 
 .opened {
   opacity: 1;
   visibility: visible;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
