--- a/src/components/Modal/modal.module.css
+++ b/src/components/Modal/modal.module.css
@@ -1,9 +1,15 @@
-.wrapper {
-  box-sizing: border-box;
-  border-radius: 40px;
-  min-width: 720px;
-  height: auto;
-  background-color: rgba(28, 28, 33, 1);
+.modal {
   position: relative;
+  width: 720px;
+  min-height: 538px;
+  border-radius: 40px;
+  background-color: #1c1c21;
+  filter: drop-shadow(0 0 1px rgba(0, 0, 0, 0.04)) drop-shadow(0 4px 8px rgba(0, 0, 0, 0.04)) drop-shadow(0 16px 24px rgba(0, 0, 0, 0.04)) drop-shadow(0 24px 32px rgba(0, 0, 0, 0.04));
 }
 
+.modal>svg {
+  position: absolute;
+  top: 60px;
+  right: 40px;
+  cursor: pointer;
+}
