--- a/src/components/ModalOverlay/modal-overlay.module.css
+++ b/src/components/ModalOverlay/modal-overlay.module.css
@@ -1,22 +1,21 @@
 .overlay {
   position: fixed;
   top: 0;
+  z-index: 100;
 
   display: none;
   width: 100%;
   height: 100%;
 
   background-color: rgba(0, 0, 0, 0.6);
-  
-  transition: all 0.3s ease-in;
 
+  transition: all 0.3s ease-in;
 }
 
 .opened {
-  opacity: 1;
-  visibility: visible;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
