--- a/src/components/OrderDetails/order-details.module.css
+++ b/src/components/OrderDetails/order-details.module.css
@@ -2,15 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding: 120px 100px;
 }
 
-
-.neon {
-  color: #fff;
-  text-shadow: 0 0 5px #fff,
-  0 0 10px #fff, 
-  0 0 15px #a500e6;
+.order {
+  padding-top: 73px;
 }
 
+.ready {
+  padding-top: 12px;
+}
