--- a/src/components/Modal/modal.module.css
+++ b/src/components/Modal/modal.module.css
@@ -7,9 +7,11 @@
   filter: drop-shadow(0 0 1px rgba(0, 0, 0, 0.04)) drop-shadow(0 4px 8px rgba(0, 0, 0, 0.04)) drop-shadow(0 16px 24px rgba(0, 0, 0, 0.04)) drop-shadow(0 24px 32px rgba(0, 0, 0, 0.04));
 }
 
-.modal>svg {
+.button {
   position: absolute;
   top: 60px;
   right: 40px;
-  cursor: pointer;
+  height: 24px;
+  border: none;
+  background-color: transparent;
 }
